Refactor: 문의 메서드 페이징 및 미사용 삭제